--- a/_posts/posts/2019-12-31-2019-year-in-review.md
+++ b/_posts/posts/2019-12-31-2019-year-in-review.md
@@ -11,11 +11,11 @@ image:
   creditlink: https://www.instagram.com/sasarunsaround/
 ---
 
-I only wrote one blog post this year about my [summer of rereading](/posts/2019/08/19/summer-of-rereading/). This does not paint the picture of how insane this year was. I don’t even know where to start. Should I go by months in chronological order? By the size of the events? How would I even measure and compare these? Well, one stands out.
+I only wrote one blog post this year about my [summer of rereading](/posts/2019/08/19/summer-of-rereading/). This does not paint the picture of how **insane** this year was. I don’t even know where to start. Should I go by months in chronological order? By the size of the events? How would I even measure and compare these? Well, one stands out.
 
 ## Apartment
 
-I bought an apartment in July. Hashtag adulting. It’s fair to say this kind of event changes anyone’s life. But no one tells you how much stress this would induce. Well, maybe they do, but you don’t fully understand. 😅 It’s probably similar to how people without kids can’t understand what kind of havoc having a child brings to your life. Is what people with kids tell me 😬
+I bought an apartment in July. _Hashtag adulting_. It’s fair to say this kind of event changes anyone’s life. But no one tells you how much stress this would induce. Well, maybe they do, but you don’t fully understand. 😅 It’s probably similar to how people without kids can’t understand what kind of havoc having a child brings to your life. Is what people with kids tell me. 😬
 
 The place was old and pretty nice already but the bathroom needed to be reworked. Badly. So renovations were going on the whole time from the moment I bought it and are still going. It already took twice as long as I planned it would take even though I took this fact into account when planning. [Hofstadter](https://en.wikipedia.org/wiki/Hofstadter's_law), am I right? It’s still not where I would like it to be but now I’m getting close. I think. At least the shower works and it is **awesome**. 🚿
 
@@ -51,17 +51,17 @@ All my photos are published on [my Instagram](https://www.instagram.com/mihareka
 
 ## Podcasting
 
-Another big chapter of my life started in 2018 when I published the first episode of [Parallel Passion](https://www.parallelpassion.com). I fell in love with podcasting. This year I published 18 episodes and loved recording and editing every single one of them.
+Another big chapter of my life started in 2018 when I published the first episode of [Parallel Passion](https://www.parallelpassion.com). I fell in love with podcasting. This year I published **18 episodes** and loved recording and editing every single one of them.
 
-This last part was the biggest surprise for me starting a podcast. I always loathed video editing and I thought it would be the same with audio. But it’s a completely different animal. I find it way more creative, rewarding, and much easier. Timing is everything and in audio-only form, where you have every speaker on their own track, it’s very easy to manipulate. For example: moving laughter half a second forward has a drastic effect on how the sentence is perceived.
+This last part was the biggest surprise for me starting a podcast. I always _loathed_ video editing and I thought it would be the same with audio. But it’s a completely different animal. I find it way more creative, rewarding, and much easier to do. Timing is everything and in audio-only form, where you have every speaker on their own track, it’s very easy to manipulate. For example: moving laughter half a second backward has a drastic effect on how the sentence is perceived.
 
 I’ve been on a short hiatus because of the apartment situation, but I can’t wait to get back to recording interviews. I knew that [software developers are amazing people](https://mr.si/talks/2018/11/15/software-developers-are-people-too/), but the more I get to interview, the more blown away I am by the diversity and intensity of the hobbies we have.
 
-I also had a pleasure to be a guest on some podcasts. First on [Pragmatic](https://engineered.network/pragmatic/episode-92-espresso/), where we talked a lot about coffee, specifically espresso. I still can’t believe John invited me to be a guest on his show. Amongst his recent guests were [Casey Liss](https://twitter.com/caseyliss), [John Siracusa](https://twitter.com/siracusa), [Merlin Mann](https://twitter.com/hotdogsladies), and [Jason Snell](https://twitter.com/jsnell). How I belong in this group is beyond me 🤯
+I also had a pleasure to be a guest on some podcasts. First on [Pragmatic](https://engineered.network/pragmatic/episode-92-espresso/), where we talked a lot about coffee, specifically **espresso**. I still can’t believe John invited me to be a guest on his show. Amongst his recent guests were [Casey Liss](https://twitter.com/caseyliss), [John Siracusa](https://twitter.com/siracusa), [Merlin Mann](https://twitter.com/hotdogsladies), and [Jason Snell](https://twitter.com/jsnell). How I belong in this group is beyond me. 🤯
 
 You can listen to [more of my thoughts on remote work](https://mr.si/posts/2018/12/26/work-remotely/) on a new podcast [Inside Remote](https://www.insideremote.io/episodes/miha-rekar-on-being-an-engineering-lead). I’m extremely grateful and flattered that I was asked to be the first guest of the podcast.
 
-The last one I did was the [Suburban Folk](https://suburbanfolk.podbean.com/e/episode-016-remote-work-marathons-coffee-and-music/) podcast. If you like my podcast and wanted for someone to turn the tables and interviews me about my hobbies - this is the episode you should listen to.
+The last one I did was the [Suburban Folk](https://suburbanfolk.podbean.com/e/episode-016-remote-work-marathons-coffee-and-music/) podcast. If you like my podcast and wanted for someone to turn the tables and interviews _me_ about _my hobbies_ - this is the episode you should listen to.
 
 ## Running
 
@@ -69,13 +69,13 @@ I ran **a lot** this year. **3,237 kilometers** to be precise. Which puts the to
 
 I ran much more on trails than in previous years and I loved it. It more or less started with [Salomon Running Academy](http://kinvital.si/salomon-tekaska-akademija/) where we got together for a group trail run in a nice location on preset courses. It was so enjoyable to run in nature with like-minded people and not caring about speed, results, or anything really. Just pure enjoyment.
 
-I still ran the (now traditional for me) [Ljubljana Marathon](http://vw-ljubljanskimaraton.si). This was the first year that I ran slower than the one before. I felt great at the start and when the race began I was *flying*. At around 25km my stomach starts acting up so I slow down a bit. But only 2km later my energy is gone. Just like that. I start walking. As soon as I start running again my heart rate hits 185 and I can’t keep it down. So I walk, run, walk again. Then at around 32km, I get a massive cramp in my upper right quadriceps. I never had cramps before so I don’t know what to do. I can’t walk, I can’t run. I try everything: massaging, stretching, rubbing,… but nothing works. Eventually, it becomes tolerable so I can wobble my way to the next aid station, drink some salt and *poof*, the cramp is gone. So I continue my walk/run routine for the rest of the race, still struggling with extremely high heart rate. The end result of 3:49:18 is much slower than expected - and full 15 min slower than last year. There’s always next year 😆️
+I still ran the (now traditional for me) [Ljubljana Marathon](http://vw-ljubljanskimaraton.si). This was the first year that I ran slower than the one before. I felt great at the start and when the race began I was **flying**. At around 25km my stomach starts acting up so I slow down a bit. But only 2km later my energy is gone. Just like that. I start walking. As soon as I start running again my heart rate hits 185 and I can’t keep it down. So I walk, run, walk again. Then at around 32km, I get a massive cramp in my upper right quadriceps. I never had cramps before so I don’t know what to do. I can’t walk, I can’t run. I try everything: massaging, stretching, rubbing,… but nothing works. Eventually, it becomes tolerable so I can wobble my way to the next aid station, drink some salt and **poof**, the cramp is gone. So I continue my walk/run routine for the rest of the race, still struggling with extremely high heart rate. The end result of 3:49:18 is much slower than expected - and full 15 min slower than last year. There’s always next year 😆️
 
 ## Music
 
 Music was always a big part of my life. It was probably the reason I got into event photography in the first place. But ever since I left that career behind, I’ve also severely decreased the number of concerts, parties, and festivals I went to. Once you go to an event with a PRESS pass it’s hard to go back to being a “normal attendee”.
 
-But this year I went to [Exit festival](https://www.exitfest.org/) again. I was a photographer there 2009-2012 but this time I went as a civilian. After **7 years**. The trees on top of Dance Arena have grown, but other than that things mostly stayed the same. Amazing venue, amazing people, amazing experience. I loved every second of it. Due to some connections, I made in those 4 years, I was even given the opportunity to go **on** the DA stage again. Nothing like being in front and on top of thousands of people all enjoying the music while the sun is rising.
+But this year I went to the [Exit festival](https://www.exitfest.org/) again. I was a photographer there 2009-2012 but this time I went as a civilian. After **7 years**. The trees on top of Dance Arena have grown, but other than that things mostly stayed the same. Amazing venue, amazing people, amazing experience. I loved every second of it. Due to some connections, I made in those 4 years, I was even given the opportunity to go **on** the DA stage again. Nothing like being in front and on top of thousands of people all enjoying the music while the sun is rising.
 
 <figure>
   <a href="https://www.instagram.com/p/BzkzQQblg52/" target="_blank"><img src="/images/posts/2019-12-31/boris-brejcha-dance-arena.jpg"></a>
@@ -102,11 +102,11 @@ I still follow and practice Stoicism as much as I can. I’m reading more books,
 
 But most importantly, I’ve kept up my [journaling practice](https://mr.si/posts/2018/09/02/journaling/). I still do it every day: when I wake up and before I go to sleep. For 491 days in a row. To say it was life-altering would be an **understatement**. I truly believe I became a better person and I’ve never felt this happy and fulfilled with life. Of course, there are bad days. **Everyone has those**. But the average life satisfaction level is trending up and has been for quite a while.
 
-One of my favorite YouTubers, [Kurzgesagt](https://www.youtube.com/user/Kurzgesagt), recently made a video on [why you should keep a gratitude journal](https://www.youtube.com/watch?v=WPPPFqsECz0). I highly recommend you watch it and then start writing that journal. This is the kind of New Year’s resolution you should make. And if you want to go beyond gratitude alone I can highly recommend the _Five minute journal_ which is what I follow. You can do it in _any_ notebook but if you want to do it in digital form [Day One](https://dayoneapp.com/) is still my app of choice.
+One of my favorite YouTubers, [Kurzgesagt](https://www.youtube.com/user/Kurzgesagt), recently made a video on [why you should keep a gratitude journal](https://www.youtube.com/watch?v=WPPPFqsECz0). I highly recommend you watch it and then start writing that journal. This is the kind of New Year’s resolution you should make. And if you want to go beyond gratitude alone I can highly recommend the _Five minute journal_ which is what I follow. You can do it in **any** notebook but if you want to do it in digital form [Day One](https://dayoneapp.com/) is still my app of choice.
 
 ## Wrapping up
 
-It’s been a wonderful year and **what an amazing decade**. At the end of 2009, I just started working as a programmer[^5], blogging and event photography was basically my entire world[^6], [I did not drink coffee](/posts/2016/04/26/in-quest-of-a-better-coffee/), and I was still living with my parents. But it was the first year I went to Exit festival. 🤔️
+It’s been a wonderful year and **what an amazing decade**. At the end of 2009, I just started working as a programmer[^5], blogging and event photography was basically my entire world[^6], [I did not drink coffee](/posts/2016/04/26/in-quest-of-a-better-coffee/), and I was still living with my parents. But it was the first year I went to the Exit festival. 🤔️
 
 Thanks for reading all this. And I’m not saying that because I was talking about gratitude a minute ago, but I really mean it. 😄️ There’s no reason anyone should care about my life, but you do, and that means a lot to me! 🤗️
 
