--- a/_posts/posts/2019-12-31-2019-year-in-review.md
+++ b/_posts/posts/2019-12-31-2019-year-in-review.md
@@ -25,19 +25,19 @@ If you follow my work for a while you probably know that I used to be an event p
 
 Since I ended that “career” the vast majority of photography I did was with my iPhone[^1] and publishing on [Instagram](https://www.instagram.com/miharekar/). When the phone cameras were bad I compensated with Instagram borders and filters. Then they gradually became better so I slowly moved from that to editing with Instagram tools which also improved over the years.
 
-But in February I discovered [Halide](https://halide.cam)[^2] that elevates the iPhone's camera with many advanced features and allows you to shoot raw. Through that app I then got introduced to [Darkroom](https://darkroom.co). And the first time in my life, I started actually editing pictures.
+But in February I discovered [Halide](https://halide.cam)[^2] that elevates the iPhone’s camera with many advanced features and allows you to shoot raw. Through that app I then got introduced to [Darkroom](https://darkroom.co). And the first time in my life, I started actually editing pictures.
 
 You see, when you’re an event photographer, the only thing that matters is speed - how soon are the photos published from when they were taken. And there are lots of them. So you optimize the workflow for fast selection. Being able to narrow down from literally thousands of photos to at most 50 in as short of a time as possible is the skill you try to level up as high as you can. The post-processing is mostly cropping, levels, and a slight vibrance boost.
 
 But editing one photo and focusing on it alone was something I never did. This was an entirely new thing I wanted to learn. In about a month I outgrew _the dark side_ and switched to [Lightroom](https://lightroom.adobe.com). Now, this was a whole new beast. I’m still trying to tame it, but I’m getting better and better at it. I know this because when I look back at the edits I made a couple of weeks or months ago, I see how bad they are[^3] and what I would do differently now.
 
-I also bought 2 new gadgets that further elevated my game. The first was [Leica Q2](https://en.leica-camera.com/Photography/Leica-Q/Leica-Q2). I planned to go on an [SCA](https://sca.coffee) trip to Burundi that was unfortunately canceled later. On that trip, I wanted to take “real” pictures and not just phone ones. But I didn't want to bring my old and faithful [Canon 5D II](https://en.m.wikipedia.org/wiki/Canon_EOS_5D_Mark_II) DSLR because it is too heavy to carry around all day and because it looks like wearing a _Please rob me!_ sign.
+I also bought 2 new gadgets that further elevated my game. The first was [Leica Q2](https://en.leica-camera.com/Photography/Leica-Q/Leica-Q2). I planned to go on an [SCA](https://sca.coffee) trip to Burundi that was unfortunately canceled later. On that trip, I wanted to take “real” pictures and not just phone ones. But I didn’t want to bring my old and faithful [Canon 5D II](https://en.m.wikipedia.org/wiki/Canon_EOS_5D_Mark_II) DSLR because it is too heavy to carry around all day and because it looks like wearing a _Please rob me!_ sign.
 
 I was looking for something compact and powerful and went from Canon EOS R, to Sony α7, to Fujifilm X-Pro2. Read a lot, watched a ton of YouTube videos, and heard Leica Q mentioned a lot. I have always wanted a Leica, but it’s like wanting a Ferrari. You know you don’t need it, you know you can’t afford it, but you can’t help lusting after it. So I googled that damn Q. And found out that Q2 **just** came out. Like in the exact week I was doing my research. Everyone seemed to love the Q and the early reviews of Q2 were basically: everything is either the same or even better.
 
 It’s the nicest piece of photo and/or tech gear I’ve ever owned. Attention to detail, build quality, user experience, the fantastic Summilux 28/1.7 lens,… It’s stunning. I didn’t have the chance to use it for what I originally bought it for, but I sure am happy with the purchase and I get giddy with joy every time I get to use it. 🥰
 
-The second, more recent, addition to my photo game was [DJI Mavic Mini](https://www.dji.com/mavic-mini). I've always wanted to have a drone but I simply could not justify buying it. They’re too expensive and too limited in their use. Knowing myself I had a hunch I’d get it, play with it for a week, then put it on a shelf for it to collect dust. But when the Mavic Mini came out the price/performance was _just right_ for me. And I **love** it. I use it way more than I thought I would and am always looking for an excuse to bring it with me.
+The second, more recent, addition to my photo game was [DJI Mavic Mini](https://www.dji.com/mavic-mini). I’ve always wanted to have a drone but I simply could not justify buying it. They’re too expensive and too limited in their use. Knowing myself I had a hunch I’d get it, play with it for a week, then put it on a shelf for it to collect dust. But when the Mavic Mini came out the price/performance was _just right_ for me. And I **love** it. I use it way more than I thought I would and am always looking for an excuse to bring it with me.
 
 <figure class="third">
   <a href="https://www.instagram.com/p/B1Gk8UzllQI/" target="_blank"><img src="/images/posts/2019-12-31/makarska-morning-traffic.jpg"></a>
@@ -52,7 +52,7 @@ All my photos are published on [my Instagram](https://www.instagram.com/mihareka
 
 Another big chapter of my life started in 2018 when I published the first episode of [Parallel Passion](https://www.parallelpassion.com). I fell in love with podcasting. This year I published **18 episodes** and loved recording and editing every single one of them.
 
-This last part was the biggest surprise for me starting a podcast. I've always _loathed_ video editing and I thought it would be the same with audio. But it’s a completely different animal. I find it way more creative, rewarding, and much easier to do. Timing is everything and in audio-only form, where you have every speaker on their own track, it’s very easy to manipulate. For example: moving laughter half a second backward has a drastic effect on how the sentence is perceived.
+This last part was the biggest surprise for me starting a podcast. I’ve always _loathed_ video editing and I thought it would be the same with audio. But it’s a completely different animal. I find it way more creative, rewarding, and much easier to do. Timing is everything and in audio-only form, where you have every speaker on their own track, it’s very easy to manipulate. For example: moving laughter half a second backward has a drastic effect on how the sentence is perceived.
 
 I’ve been on a short hiatus because of the apartment situation, but I can’t wait to get back to recording interviews. I knew that [software developers are amazing people](https://mr.si/talks/2018/11/15/software-developers-are-people-too/), but the more I get to interview, the more blown away I am by the diversity and intensity of the hobbies we have.
 
@@ -60,7 +60,7 @@ I also had a pleasure to be a guest on some podcasts. First on [Pragmatic](https
 
 You can listen to [more of my thoughts on remote work](https://mr.si/posts/2018/12/26/work-remotely/) on a new podcast [Inside Remote](https://www.insideremote.io/episodes/miha-rekar-on-being-an-engineering-lead). I’m extremely grateful and flattered that I was asked to be the first guest of the podcast.
 
-The last one I did was the [Suburban Folk](https://suburbanfolk.podbean.com/e/episode-016-remote-work-marathons-coffee-and-music/) podcast. If you like my podcast and wanted for someone to turn the tables and interviews _me_ about _my hobbies_ - this is the episode you should listen to.
+The last one I did was the [Suburban Folk](https://suburbanfolk.podbean.com/e/episode-016-remote-work-marathons-coffee-and-music/) podcast. If you like my podcast and wanted for someone to turn the tables and interview _me_ about _my hobbies_ - this is the episode you should listen to.
 
 ## Running
 
@@ -68,7 +68,7 @@ I ran **a lot** this year. **3,237 kilometers** to be precise. Which puts the to
 
 I ran much more on trails than in previous years and I loved it. It more or less started with [Salomon Running Academy](http://kinvital.si/salomon-tekaska-akademija/) where we got together for a group trail run in a nice location on preset courses. It was so enjoyable to run in nature with like-minded people and not caring about speed, results, or anything really. Just pure enjoyment.
 
-I still ran the (now traditional for me) [Ljubljana Marathon](http://vw-ljubljanskimaraton.si). This was the first year that I ran slower than the year before. I felt great at the start and when the race began I was **flying**. At around 25km my stomach started acting up so I slowed down a bit. But only 2km later my energy was gone. Just like that. I started walking. As soon as I started running again, my heart rate hit 185, and I couldn't keep it down. So I walked, ran, walked again. Then at around 32km, I got a massive cramp in my upper right quadriceps. I never had cramps before so I don’t know what to do. I couldn't walk, I couldn't run. I tried everything: massaging, stretching, rubbing,… but nothing worked. Eventually, it became tolerable so I could wobble my way to the next aid station, drink some salt and **poof**, the cramp was gone. So I continued my walk/run routine for the rest of the race, still struggling with extremely high heart rate. The end result of 3:49:18 was much slower than expected - and full 15 min slower than last year. There’s always next year! 😆️
+I still ran the (now traditional for me) [Ljubljana Marathon](http://vw-ljubljanskimaraton.si). This was the first year that I ran slower than the year before. I felt great at the start and when the race began I was **flying**. At around 25km my stomach started acting up so I slowed down a bit. But only 2km later my energy was gone. Just like that. I started walking. As soon as I started running again, my heart rate hit 185, and I couldn’t keep it down. So I walked, ran, walked again. Then at around 32km, I got a massive cramp in my upper right quadriceps. I never had cramps before so I didn’t know what to do. I couldn’t walk, I couldn’t run. I tried everything: massaging, stretching, rubbing,… but nothing worked. Eventually, it became tolerable so I could wobble my way to the next aid station, drink some salt and **poof**, the cramp was gone. I continued my walk/run routine for the rest of the race, still struggling with extremely high heart rate. The end result of 3:49:18 was much slower than expected - and full 15 min slower than last year. There’s always next year! 😆️
 
 ## Music
 
@@ -89,7 +89,7 @@ I wrote about my all-time favorite books [in the previous post](https://mr.si/po
 
 [Permanent Record](https://www.amazon.com/o/ASIN/1250237238/parpaspod-20) by Edward Snowden is pretty much what you’d expect it to be - fantastic. He tells his story and what led him to leak what he leaked. I’ve run much longer runs because I didn’t want the book listening to end. The world is in a better place because of him, but we’re still far off from good. The book also includes this gem:
 
-> Ultimately, saying that you don't care about privacy because you have nothing to hide is no different from saying you don't care about freedom of speech because you have nothing to say.
+> Ultimately, saying that you don’t care about privacy because you have nothing to hide is no different from saying you don’t care about freedom of speech because you have nothing to say.
 
 [Educated: A Memoir](https://www.amazon.com/o/ASIN/0399590501/parpaspod-20) by Tara Westover is unlike anything I’ve read before. How these kinds of stories are happening in our timeline inside a 1st world country is beyond my understanding. It goes to show how incredibly dangerous it is to have no/poor education, how susceptible you are to lies and conspiracies, and mostly how hard it is for children to escape that. Great book, great story, greatly written. My friend Alja put it best:
 
