--- a/_posts/posts/2019-12-31-2019-year-in-review.md
+++ b/_posts/posts/2019-12-31-2019-year-in-review.md
@@ -116,4 +116,4 @@ Thanks for reading all this. And I’m not saying that because I was talking abo
 [^3]:If you look back at your old work and think it’s bad and can’t believe how you could ever do something like that, be proud! That means you’re learning and growing. You should feel bad when you look back at your work and think it’s awesome and that you couldn’t top it today. That means you’ve peaked.
 [^4]:Europeans / Westerners
 [^5]:More code monkey at the time to be honest
-[^6]:I also wrote a [year wrap-up post](http://b.mr.si/2009/12/25/cetrta-obletnica-bloga/) but it’s in Slovene
+[^6]:I also wrote a [year wrap-up post in 2009](http://b.mr.si/2009/12/25/cetrta-obletnica-bloga/) but it’s in Slovene
