Add podstand link

--- a/_posts/posts/2020-12-29-2020-year-in-review.md
+++ b/_posts/posts/2020-12-29-2020-year-in-review.md
@@ -78,7 +78,7 @@ There were no _normal_ competitions this year, so it's a first year out of the l
 
 ## Books
 
-[Goodreads tells me](https://www.goodreads.com/user/show/23635185-miha-rekar) that I read less this year than previous years. I blame podcasts. I have too many, and I love listening to all of them, so it's impossible to unsubscribe from any. But I digress.
+[Goodreads tells me](https://www.goodreads.com/user/show/23635185-miha-rekar) that I read less this year than previous years. I blame podcasts. I have too many, and I love listening to [all of them](https://podstand.co/profile/MihaRekar), so it's impossible to unsubscribe from any. But I digress.
 
 Here are the most notable books I read this year that I can **wholeheartedly recommend**:
 
