Update with final run numbers

--- a/_posts/posts/2020-12-29-2020-year-in-review.md
+++ b/_posts/posts/2020-12-29-2020-year-in-review.md
@@ -70,7 +70,7 @@ I also keep being a fan of [Halide](https://halide.cam) folks. They came out wit
 
 ## Running
 
-I didn't plan to top my last year's total running distance, but I still did it. Being quarantined all the time, running was my escape valve. So, I ran **a lot**. And _further_. And much _hillier_. **3,663 km** in distance and **83,300 m** in elevation to be precise[^4].
+I didn't plan to top my last year's total running distance, but I still did it. Being quarantined all the time, running was my escape valve. So, I ran **a lot**. And _further_. And much _hillier_. **3,677 km** in distance and **84,246 m** in elevation to be precise[^4].
 
 Because of the restrictions I mostly ran in and around Ljubljana. Discovering and rediscovering the same paths over and over again. But here and there I did a couple of longer runs with friends. Those are always the most fun and memorable. And exhausting when [Blaž](https://instagram.com/blazstrozer) is in charge of charting the trail. But he then also provides a nice home-grilled meal. 😋 So, you know, all good. 😅
 
@@ -142,5 +142,5 @@ But I managed to pull through without massive consequences. I think. And now the
 [^1]:	Cough, stoicism, cough
 [^2]:	Meaning they can be listened to at any time. Not that they're that great. 😅 I try to record every episode in such a way to never reference any actual events. So, in theory, you shouldn’t be able to tell if an episode was recorded this week or 5 years ago.
 [^3]:	Such a hipster
-[^4]:	At the time of writing. Will update with final figures when the year is completely wrapped.
+[^4]:	2,285 miles and 276,398 feet respectively
 [^5]:	That’s what I’m good at 🤷‍♂️️
