--- a/_posts/posts/2020-12-29-2020-year-in-review.md
+++ b/_posts/posts/2020-12-29-2020-year-in-review.md
@@ -76,6 +76,21 @@ Because of the restrictions I mostly ran in and around Ljubljana. Discovering an
 
 There were no _normal_ competitions this year, so it's a first year out of the last 6 that I didn't run a marathon. But there were different kind of competitions. Virtual ones. The routes were defined as [Strava](https://www.strava.com/athletes/5530295) segments. All you had to do is pick a time within a timeframe of several weeks, go to the starting point, and run. You can do it as many times as you want. Best time counts. I entered 3 races: [Besnica 360°](https://www.facebook.com/groups/trail.besnica.360), [Jamnik Trail](https://docs.google.com/document/d/1adcnjaUURaQAEgVkK9DsHzHflhrFZ475uqgG_KvgWXQ/edit), and [Bled Round Trail](https://www.nocna10ka.net/eng/info/BRT). I was never on a podium before, but this year I was 3/3. 🥉🥉🥈 Twice third, and once second. In my respectful category, not generally, but still. Felt fantastic. 😊
 
+<figure>
+  <a href="https://www.facebook.com/media/set/?set=a.969707246808635" target="_blank"><img src="/images/posts/2020-12-29/miha-podium.jpeg"></a>
+</figure>
+
+If you follow me on Instagram[^5], you can see that I take many photos on my runs. But what’s changed this year is that almost every time there’s a picture with some running stats on it. I’ve always wanted to share that but what apps like Strava and Garmin give you looks like it was designed at the exact time Instagram came out. It’s in a 1:1 square ratio and arguably _hideous_. I did like what came out of Suunto app stylistically, but I don’t use Suunto gear, and again, they stuck with that stupid 1:1 ratio. C’mon, 9:16 stories are _a thing for a while now_. Move with the times, will you?
+
+So, not finding anything that suits my needs, and having some time in first quarantine I decided to do it myself. **How hard can it be?** Turns out, quite hard. And I’ve forgotten everything about high school math. Which felt embarrassing, given how great I used to be at it. I took Suunto’s export for inspiration, asked my favorite designer [Tina](https://dribbble.com/tinatavcar) for some help, and then iterated, and iterated, until I was happy with the results. I now use it all the time, and many other people do as well. Feel free to check it out on [join.run](https://join.run/).
+
+<figure class="third">
+  <img src="/images/posts/2020-12-29/joinrun-sketch.jpeg">
+  <img src="/images/posts/2020-12-29/joinrun-first.jpeg">
+  <img src="/images/posts/2020-12-29/joinrun-current.jpeg">
+  <figcaption>From sketch to first iteration and current design.</figcaption>
+</figure>
+
 ## Books
 
 [Goodreads tells me](https://www.goodreads.com/user/show/23635185-miha-rekar) that I read less this year than previous years. I blame podcasts. I have too many, and I love listening to [all of them](https://podstand.co/profile/MihaRekar), so it's impossible to unsubscribe from any. But I digress.
@@ -122,7 +137,7 @@ I'm not most people, though. And I, as previously mentioned, am **privileged AF*
 
 Together with ownership of the machine comes access to an exclusive owners _Diaspora_. There you have some of the most knowledgeable coffee people I've ever known existed. If you thought I'm weird, …well…let's just say I found my tribe. 😂
 
-But there was one thing that I was missing: a nice way to see all that data that the machine generates. Sure, you can see it on the tablet that sits on top of the machine, but I don’t want to stand around and look at it. So, I made an [open-source web app](https://github.com/miharekar/decent-visualizer)[^5], expecting to only use it myself. Turns out, other people wanted something like this too. Quickly, upon sharing it with _the Diaspora_, the feature requests started coming in. It started growing, and in a couple of weeks, more than 3,000 `.shot` files were uploaded. Most of them analyzed and/or shared with the larger community. Then I went the extra step, bought a **snazzy domain**, and made it all proper: [visualizer.coffee](https://visualizer.coffee/).
+But there was one thing that I was missing: a nice way to see all that data that the machine generates. Sure, you can see it on the tablet that sits on top of the machine, but I don’t want to stand around and look at it. So, I made an [open-source web app](https://github.com/miharekar/decent-visualizer)[^6], expecting to only use it myself. Turns out, other people wanted something like this too. Quickly, upon sharing it with _the Diaspora_, the feature requests started coming in. It started growing, and in a couple of weeks, more than 3,000 `.shot` files were uploaded. Most of them analyzed and/or shared with the larger community. Then I went the extra step, bought a **snazzy domain**, and made it all proper: [visualizer.coffee](https://visualizer.coffee/).
 
 <figure>
   <a href="https://visualizer.coffee/shots/072f9427-d79b-44d2-946e-465d0545ccc1" target="_blank"><img src="/images/posts/2020-12-29/visualizer.png"></a>
@@ -143,4 +158,5 @@ But I managed to pull through without massive consequences. I think. And now the
 [^2]:	Meaning they can be listened to at any time. Not that they're that great. 😅 I try to record every episode in such a way to never reference any actual events. So, in theory, you shouldn’t be able to tell if an episode was recorded this week or 5 years ago.
 [^3]:	Such a hipster
 [^4]:	2,285 miles and 276,398 feet respectively
-[^5]:	That’s what I’m good at 🤷‍♂️️
+[^5]:	If you don't and are reading this [you totally should](https://www.instagram.com/miharekar/)
+[^6]:	That’s what I’m good at 🤷‍♂️️
